--- a/css/style.css
+++ b/css/style.css
@@ -44,19 +44,27 @@ nav a:hover{
   -webkit-transition: top 1s ease-out;
   transition: top 1s ease-out;
   z-index: 1;
-
   /*Your code here - position relative to the parent */
+  position: absolute;
   /*Your code here - place 40px higher */;
+  margin-top: -40px;
 }
 
 /*Your code here*/
 /*Add the selector and rule to move the skip 
 link to the exact top of the page.*/
- 
+.skip:focus{
+  position:relative;
+  margin-top: 0;
+}
 
 /*Your code here*/
 /*Add the selector and code to put a 2px black 
 border around all elements in focus.*/
+*:focus{
+  border: 2px;
+  border-color:black;
+}
   
 
 footer{
@@ -64,7 +72,7 @@ footer{
   background-color: black;
 
   grid-column: 1 / -1;  /*Can you explain what this does?*/
-  grid-row: 1 / span 1;   /*Can you rewrite it?*/
+  grid-row: -1 / span 1;   /*Can you rewrite it?*/
   padding-top: 30px;
   text-align: center;
 }
@@ -87,9 +95,14 @@ header{
   color: white;
   height: 400px;                /* Parallax effect */
 
-  /* Your code here */
-  /* Set background-image to header.jpg in the images folder */
-  /* Span one row */
+  background-image: "/images/header.jpg";
+  grid-column: 1 / -1;
+  grid-row: 2 / span 1;
+
+  /* Spans all of the columns.
+  Begins on 2nd row and spans 1 row.
+  Header uses header.jpg as a non-repeating 
+  background image with parallax */
 }
 
 header p{
@@ -101,19 +114,33 @@ header p{
 
 
 .container{
-  /*Your code here  */
-  /* See documentation for mobile view */
+  /* Three columns:  100px, 400px, and 100px
+  Seven rows: 30px, five auto, and 100px. 
+  Gap 15px between rows; */
+
+  display: grid;
+  grid-template-columns: 100px 400px 100px;
+  grid-template-rows: 30px auto auto auto auto auto 100px;
+  grid-row-gap: 15px;
+
 
 }
 .about, .method, .clients, .contact{
-  /*Your code here */
-  /* See documentation for mobile view */
+  /* Begin in 2nd  column and span one column
+  Begin on the third, fourth, … rows    
+   respectively and each span one row. */
+/*   
+  grid-column: 2 / span 1;
+  grid-row: nth-child; */
 
 }
 
 .about-image, .method-image, .clients-image, .contact-image{
-   /*Your code here */
-   /* See documentation for mobile view */
+  /* Span all of the columns.
+Have a maximum height of  700px
+Hide any content that goes outside their grid cell. 
+Begin on the third, fourth, … rows respectively and each span one row. */
+
 }
 
 .about, .about-image{
