oh now were cookin with gas

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ html{
 }
 
 body{
-  background-color: black;
+  background-color: white;
   font-size: 18px;
   margin: 0;
   padding: 0;
@@ -54,7 +54,7 @@ nav a:hover{
 /*Add the selector and rule to move the skip 
 link to the exact top of the page.*/
 .skip:focus{
-  position:relative;
+  position:absolute;
   margin-top: 0;
 }
 
@@ -68,7 +68,7 @@ border around all elements in focus.*/
   
 
 footer{
-  color: white;
+  /* color: white; */
   background-color: black;
 
   grid-column: 1 / -1;  /*Can you explain what this does?*/
@@ -88,14 +88,16 @@ nav{
 }
 
 header{
+
   background-attachment: fixed; /* Parallax effect */     
   background-position: center;  /* Parallax effect */
   background-repeat: no-repeat; /* Parallax effect */
   background-size: cover;       /* Parallax effect */
-  color: white;
+  background-image: url("images/header.jpg");
+
+  color: black;
   height: 400px;                /* Parallax effect */
 
-  background-image: "/images/header.jpg";
   grid-column: 1 / -1;
   grid-row: 2 / span 1;
 
@@ -106,7 +108,7 @@ header{
 }
 
 header p{
-  color: white;
+  color: black;
   font-size: 24px;
   padding: 0 100px;
   text-align: center;
@@ -121,7 +123,7 @@ header p{
   display: grid;
   grid-template-columns: 100px 400px 100px;
   grid-template-rows: 30px auto auto auto auto auto 100px;
-  grid-row-gap: 15px;
+  row-gap: 15px;
 
 
 }
@@ -129,10 +131,7 @@ header p{
   /* Begin in 2nd  column and span one column
   Begin on the third, fourth, … rows    
    respectively and each span one row. */
-/*   
-  grid-column: 2 / span 1;
-  grid-row: nth-child; */
-
+  grid-column: 2 / 3;
 }
 
 .about-image, .method-image, .clients-image, .contact-image{
@@ -140,30 +139,39 @@ header p{
 Have a maximum height of  700px
 Hide any content that goes outside their grid cell. 
 Begin on the third, fourth, … rows respectively and each span one row. */
+  max-height: 700px;
+  overflow: hidden;
+  grid-column: 1 / -1;
+
 
 }
 
 .about, .about-image{
   /*Your code here */
   /* See documentation for mobile view */
-
+  grid-row: 3 / span 1;
 }
 
 .method, .method-image{
   /*Your code here */
   /* See documentation for mobile view */
+  grid-row: 4 / span 1;
 }
 
 
 .clients, .clients-image{
   /*Your code here */
   /* See documentation for mobile view */
+  grid-row: 5 / span 1;
+
 }
 
 
 .contact, .contact-image{
   /*Your code here */
   /* See documentation for mobile view */
+  grid-row: 6 / span 1;
+
 }
 
 .text-block{
@@ -173,7 +181,7 @@ Begin on the third, fourth, … rows respectively and each span one row. */
   /*Your code here:*/
   /*Align the content in the center */
   align-content: center;
-  justify-content: space-between;
+  align-self: center;
 }
 
 
