--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ nav a:hover{
 /*Add the selector and rule to move the skip 
 link to the exact top of the page.*/
 .skip a:focus{
-  top: 0 px;
+  top: 0px;
 }
 
 /*Your code here*/
@@ -82,7 +82,7 @@ nav{
 
   /*Your code here*/
   grid-column: 1 / -1;
-  grid-row: 1 / 1;
+  grid-row: 1 / span 1;
 }
 
 header{
@@ -110,7 +110,7 @@ header p{
 .container{
   display: grid;
   grid-template-columns: 100px 400px 100px;
-  grid-template-rows: 30px auto auto auto auto auto;
+  grid-template-rows: 30px auto auto auto auto auto 100px;
   row-gap: 15px;
 
 }
